FIX IE BUG WITH Z-INDEX - IE SDFIS&%%@

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -720,6 +720,7 @@ body {
     position: relative;
     margin-top: -26px;
     padding-top: 26px;
+    z-index: 1000;
     nav.menu {
       position: absolute;
       width: 100%;
